--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-LM_BASE_URL=http://localhost:1234/v1
-LM_API_KEY=not-needed
-LM_MODEL=Meta-Llama-3-8B-Instruct
-LM_TEMPERATURE=0.7
-LM_MAX_TOKENS=1500
+AI_BASE_URL=https://api.groq.com/openai/v1
+AI_API_KEY=coloca-tu-clave-de-groq-aqui
+AI_MODEL=llama-3.1-8b-instant
+AI_TEMPERATURE=0.7
+AI_MAX_TOKENS=1500
+REDIS_URL=redis://localhost:6379/0
